--- a/statics/templates/livraison_tpe_repare.html
+++ b/statics/templates/livraison_tpe_repare.html
@@ -5,7 +5,6 @@
   <title>LIVRAISON TPE RÉPARÉ</title>
   <style>
     .container {
-      border: 1px solid #000;
       width: 100%;
       max-width: 800px;
       margin: 0 auto;
@@ -38,7 +37,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <img src="../../statics/images/logos/logo.png" alt="Logo" width="200" height="50">
+      <img src="https://res.cloudinary.com/digitkbit/image/upload/v1744802840/logo_bdj4ks.png" class="logo" alt="Green Pay" width="200" height="50">
       <h1 style="text-align: center; flex: 1;">LIVRAISON TPE RÉPARÉ</h1>
     </div>
 
