--- a/statics/templates/livraison_tpe_mobile.html
+++ b/statics/templates/livraison_tpe_mobile.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <title>LIVRAISON TPE MOBILE</title>
@@ -46,7 +47,8 @@
       margin-top: 10px;
     }
 
-    th, td {
+    th,
+    td {
       border: 1px solid #000;
       padding: 5px;
       text-align: center;
@@ -64,7 +66,22 @@
     }
 
     .footer-signature {
-      margin-top: 40px;
+      margin-top: 20px;
+    }
+
+    .signature-image {
+      margin-top: 10px;
+      max-width: 250px;
+      max-height: 120px;
+      object-fit: contain;
+      border: 1px solid #ccc;
+    }
+
+    .date-validation {
+      margin-top: 5px;
+      font-size: 12px;
+      color: #333;
+      text-align: center;
     }
 
     .note {
@@ -73,18 +90,25 @@
       font-size: 12px;
       font-style: italic;
     }
+
+    .date-validation {
+      margin-top: 5px;
+      font-size: 12px;
+      color: #333;
+      display: inline
+    }
   </style>
 </head>
+
 <body>
   <div class="container">
     <div class="header">
-      <img src="https://res.cloudinary.com/digitkbit/image/upload/v1744802840/logo_bdj4ks.png" class="logo" alt="Green Pay">
+      <img src="https://res.cloudinary.com/digitkbit/image/upload/v1744802840/logo_bdj4ks.png" class="logo"
+        alt="Green Pay">
       <h1>LIVRAISON TPE MOBILE</h1>
     </div>
-
-    <div><strong>Commentaire :</strong> {{commentaire}}</div>
+    <div><strong>Commentaire</strong> {{commentaire}}</div>
     <div><strong>Date :</strong> {{date_livraison}}</div>
-
     <table>
       <thead>
         <tr>
@@ -95,29 +119,26 @@
           <th>MOOV</th>
         </tr>
       </thead>
-      <tbody>
-        {{produitsRows}}
-      </tbody>
+      <tbody>{{produitsRows}}</tbody>
     </table>
-
-    <div style="margin-top: 15px;">
-      <strong>Total :</strong> {{qte_totale_livraison}}
-    </div>
-
+    <div style="margin-top: 15px;"><strong>Total :</strong> {{qte_totale_livraison}}</div>
     <div class="footer">
       <div>
         <strong>Expéditeur :</strong> {{nom_expediteur}}
-        <div class="footer-signature">Signature</div>
+
       </div>
       <div>
         <strong>Récepteur :</strong> {{nom_recepteur}}
-        <div class="footer-signature">Signature</div>
+        <div class="footer-signature">
+          <img src="{{signature}}" alt="Signature du récepteur" class="signature-image" />
+          <div class="date-validation">
+            <strong>Date de réception :</strong> {{date_validation}}
+          </div>
+        </div>
       </div>
     </div>
-
-    <p class="note">
-      @ Automatiquement généré par le système de gestion de livraison Green-Pay
-    </p>
+    <p class="note">@ Automatiquement généré par le système de livraison Green-Pay</p>
   </div>
 </body>
+
 </html>
