--- a/statics/templates/livraison_tpe_gim.html
+++ b/statics/templates/livraison_tpe_gim.html
@@ -48,7 +48,7 @@
       <div>
         <strong>Récepteur :</strong> {{nom_recepteur}}
         <div class="footer-signature">
-          <img src="{{signature_recepteur}}" alt="Signature du récepteur" class="signature-image"/>
+          <img src="{{signature}}" alt="Signature du récepteur" class="signature-image"/>
           <div class="date-validation"><strong>Date de réception :</strong> {{date_validation}}</div>
         </div>
       </div>
