Modification des formulaires de livraison, création de la fonction return livraison et modification de la fonciton updateLivraison.

--- a/statics/templates/livraison_chargeur_tpe.html
+++ b/statics/templates/livraison_chargeur_tpe.html
@@ -24,7 +24,11 @@
   <div class="container">
     <div class="header">
       <img src="https://res.cloudinary.com/digitkbit/image/upload/v1744802840/logo_bdj4ks.png" class="logo" alt="Green Pay">
-      <h1>LIVRAISON CHARGEUR TPE</h1>
+      <h1>
+        <span style="background:#eaee7f; padding:2px; color: #ffff;">
+            LIVRAISON CHARGEUR TPE
+        </span>
+      </h1>
     </div>
     <div><strong>Commentaire :</strong> {{commentaire}}</div>
     <div><strong>Date :</strong> {{date_livraison}}</div>
@@ -34,7 +38,6 @@
           <th>Marchand</th>
           <th>Numéro de série</th>
           <th>Caisse</th>
-          <th>Quantité</th>
         </tr>
       </thead>
       <tbody>{{produitsRows}}</tbody>
