--- a/statics/templates/livraison_tpe_ecobank.html
+++ b/statics/templates/livraison_tpe_ecobank.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>LIVRAISON TPE MISE À JOUR</title>
+  <title>LIVRAISON TPE ECOBANK</title>
   <style>
     * { box-sizing: border-box; }
     body { margin: 0; padding: 0; overflow-x: hidden; font-family: Arial, sans-serif; }
@@ -25,8 +25,8 @@
     <div class="header">
       <img src="https://res.cloudinary.com/digitkbit/image/upload/v1744802840/logo_bdj4ks.png" class="logo" alt="Green Pay">
       <h1>
-        <span style="background:#a476d2; padding:2px; color: #ffff;">
-            LIVRAISON TPE MAJ GIM
+        <span style="background:#80d8e6; padding:2px; color: #ffff;">
+            LIVRAISON TPE ECOBANK
         </span>
       </h1>
     </div>
