--- a/statics/templates/livraison_tpe_gim.html
+++ b/statics/templates/livraison_tpe_gim.html
@@ -24,7 +24,11 @@
   <div class="container">
     <div class="header">
       <img src="https://res.cloudinary.com/digitkbit/image/upload/v1744802840/logo_bdj4ks.png" class="logo" alt="Green Pay">
-      <h1>LIVRAISON TPE GIM</h1>
+      <h1>
+        <span style="background:#cda5f5; padding:2px; color: #ffff;">
+            LIVRAISON TPE GIM
+        </span>
+      </h1>
     </div>
     <div><strong>Commentaire :</strong> {{commentaire}}</div>
     <div><strong>Date :</strong> {{date_livraison}}</div>
@@ -35,6 +39,9 @@
           <th>Numéro de série</th>
           <th>Caisse</th>
           <th>Banque</th>
+          <th>OM</th>
+          <th>MTN</th>
+          <th>MOOV</th>
         </tr>
       </thead>
       <tbody>{{produitsRows}}</tbody>
