--- a/statics/templates/livraison_tpe_mobile.html
+++ b/statics/templates/livraison_tpe_mobile.html
@@ -105,15 +105,20 @@
     <div class="header">
       <img src="https://res.cloudinary.com/digitkbit/image/upload/v1744802840/logo_bdj4ks.png" class="logo"
         alt="Green Pay">
-      <h1>LIVRAISON TPE MOBILE</h1>
+      <h1>
+        <span style="background:#77ef83; padding:2px; color: #ffff;">
+            LIVRAISON TPE MOBILE
+        </span>
+      </h1>
     </div>
-    <div><strong>Commentaire</strong> {{commentaire}}</div>
+    <div><strong>Commentaire :</strong> {{commentaire}}</div>
     <div><strong>Date :</strong> {{date_livraison}}</div>
     <table>
       <thead>
         <tr>
           <th>Marchand</th>
           <th>Numéro de série</th>
+          <th>Caisse</th>
           <th>OM</th>
           <th>MTN</th>
           <th>MOOV</th>
