--- a/statics/templates/livraison_tpe_repare.html
+++ b/statics/templates/livraison_tpe_repare.html
@@ -24,7 +24,11 @@
   <div class="container">
     <div class="header">
       <img src="https://res.cloudinary.com/digitkbit/image/upload/v1744802840/logo_bdj4ks.png" class="logo" alt="Green Pay" width="200" height="50">
-      <h1>LIVRAISON TPE RÉPARÉ</h1>
+      <h1>
+        <span style="background:#ee6060; padding:2px; color: #ffff;">
+            LIVRAISON TPE REPARE
+        </span>
+      </h1>
     </div>
 
     <div><strong>Commentaire :</strong> {{commentaire}}</div>
@@ -35,6 +39,7 @@
         <tr>
           <th>Marchand</th>
           <th>Numéro de série</th>
+          <th>Caisse</th>
         </tr>
       </thead>
       <tbody>
