API SIGNATURE EXPEDITEUR

--- a/statics/templates/livraison_chargeur_tpe.html
+++ b/statics/templates/livraison_chargeur_tpe.html
@@ -46,7 +46,9 @@
     <div class="footer">
       <div>
         <strong>Expéditeur :</strong> {{nom_expediteur}}
-        <div class="footer-signature">Signature</div>
+        <div class="footer-signature"></div>
+          <img src="{{signature_expediteur}}" alt="Signature de l'expéditeur" class="signature-image"/>
+          <!-- <div class="date-validation"><strong>Date d'expédition :</strong> {{date_livraison}}</div> -->
       </div>
       <div>
         <strong>Récepteur :</strong> {{nom_recepteur}}
