--- a/statics/templates/livraison_tpe_repare.html
+++ b/statics/templates/livraison_tpe_repare.html
@@ -54,7 +54,8 @@
     <div class="footer">
       <div>
         <strong>Expéditeur :</strong> {{nom_expediteur}}
-        <div class="footer-signature">Signature</div>
+        <!-- <div class="footer-signature">Signature</div> -->
+          <img src="{{signature_expediteur}}" alt="Signature de l'expéditeur" class="signature-image"/>
       </div>
       <div>
         <strong>Récepteur :</strong> {{nom_recepteur}}
