MODIFS DE DERNIERE MINUTES BACKEND

--- a/statics/templates/livraison_tpe_repare.html
+++ b/statics/templates/livraison_tpe_repare.html
@@ -55,12 +55,12 @@
       <div>
         <strong>Expéditeur :</strong> {{nom_expediteur}}
         <!-- <div class="footer-signature">Signature</div> -->
-          <img src="{{signature_expediteur}}" alt="Signature de l'expéditeur" class="signature-image"/>
+          <img src="{{signature_expediteur}}" alt="" class="signature-image"/>
       </div>
       <div>
         <strong>Récepteur :</strong> {{nom_recepteur}}
         <div class="footer-signature">
-          <img src="{{signature}}" alt="Signature du récepteur" class="signature-image"/>
+          <img src="{{signature}}" alt="" class="signature-image"/>
           <div class="date-validation"><strong>Date de réception :</strong> {{date_validation}}</div>
         </div>
       </div>
