Nouvelles mdofis: avec ajout de la loading page.

--- a/backend/statics/templates/demande_DT.html
+++ b/backend/statics/templates/demande_DT.html
@@ -125,6 +125,7 @@
                     <th>Stock restant</th>
                     <th>{{stock_final}}</th>
                 </tr>
+                {{autre_champs}}
             </tbody>
         </table>
         <div class="date-demande"><strong>Date de l'opération :</strong> {{date_demande}}</div>
