--- a/backend/statics/templates/demande_livraison.html
+++ b/backend/statics/templates/demande_livraison.html
@@ -128,6 +128,7 @@
                     <th>Stock restant</th>
                     <th>{{stock_final}}</th>
                 </tr>
+                {{autre_champs}}
                 <tr>
                     <th>Livreur</th>
                     <th>{{nom_livreur}}</th>
@@ -136,6 +137,7 @@
                     <th>Quantitée livrée</th>
                     <th>{{quantite_livraison}}</th>
                 </tr>
+                {{autre_champs_livraison}}
                 <tr>
                     <th>Recepteur</th>
                     <th>{{nom_recepteur}}</th>
