Ajout extraction XLSX;

--- a/backend/statics/templates/livraison_base.html
+++ b/backend/statics/templates/livraison_base.html
@@ -39,8 +39,8 @@
     }
     .note { text-align: center; margin-top: 30px; font-size: 12px; font-style: italic; }
     .title_type {
-        background-color: #fff;
-        color: #000;
+      background-color: #fff;
+      color: #000;
     }
   </style>
 </head>
@@ -50,7 +50,7 @@
       <img src="https://res.cloudinary.com/digitkbit/image/upload/v1744802840/logo_bdj4ks.png" class="logo" alt="Green Pay">
       <h1>
         <span class="title_type" style="padding:2px;">
-            LIVRAISON {{type_livraison}}
+          {{type_livraison}}
         </span>
       </h1>
     </div>
