--- a/backend/statics/templates/demande_DT.html
+++ b/backend/statics/templates/demande_DT.html
@@ -103,7 +103,7 @@
             <tbody>
                 <tr>
                     <th>Stock de départ</th>
-                    <th>Mr. NONWANON</th>
+                    <th>{{service_donneur}}</th>
                 </tr>
                 <tr>
                     <th>Service demandeur</th>
@@ -112,6 +112,10 @@
                 <tr>
                     <th>Demandeur</th>
                     <th>{{nom_demandeur}}</th>
+                </tr>
+                <tr>
+                    <th>Type demande</th>
+                    <th>{{mouvement}}</th>
                 </tr>
                 <tr>
                     <th>Stock initiale</th>
