--- a/backend/statics/templates/remplacement_TPE.html
+++ b/backend/statics/templates/remplacement_TPE.html
@@ -67,6 +67,7 @@
           <th>OM</th>
           <th>MTN</th>
           <th>MOOV</th>
+          <th>RNE</th>
         </tr>
       </thead>
       <tbody>{{produitsRows}}</tbody>
