feat(demande): Formulaire de modification de demande modifié!

--- a/backend/statics/templates/demande_DT.html
+++ b/backend/statics/templates/demande_DT.html
@@ -118,12 +118,16 @@
                     <th>{{mouvement}}</th>
                 </tr>
                 <tr>
-                    <th>Stock initiale</th>
+                    <th>Quantité demandée</th>
+                    <th>{{quantite}}</th>
+                </tr>
+                <tr>
+                    <th>Stock initial</th>
                     <th>{{stock_initial}}</th>
                 </tr>
                 <tr>
-                    <th>Quantité demandée</th>
-                    <th>{{quantite}}</th>
+                    <th>Quantité livrée</th>
+                    <th>{{quantite_livree}}</th>
                 </tr>
                 <tr>
                     <th>Stock restant</th>
