--- a/backend/statics/templates/demande_livraison.html
+++ b/backend/statics/templates/demande_livraison.html
@@ -117,12 +117,16 @@
                     <th>{{mouvement}}</th>
                 </tr>
                 <tr>
+                    <th>Quantité demandée</th>
+                    <th>{{quantite}}</th>
+                </tr>
+                <tr>
                     <th>Stock initiale</th>
                     <th>{{stock_initial}}</th>
                 </tr>
                 <tr>
-                    <th>Quantité demandée</th>
-                    <th>{{quantite}}</th>
+                    <th>Quantité livrée</th>
+                    <th>{{quantite_livree}}</th>
                 </tr>
                 <tr>
                     <th>Stock restant</th>
