feat(livraion-stock): Séparation formulaires de validation et de livraison !

--- a/backend/statics/templates/demande_DT.html
+++ b/backend/statics/templates/demande_DT.html
@@ -122,17 +122,17 @@
                     <th>{{quantite}}</th>
                 </tr>
                 <tr>
+                    <th>Quantité validée</th>
+                    <th>{{quantite_validee}}</th>
+                </tr>
+                <!-- <tr>
                     <th>Stock initial</th>
                     <th>{{stock_initial}}</th>
                 </tr>
                 <tr>
-                    <th>Quantité livrée</th>
-                    <th>{{quantite_livree}}</th>
-                </tr>
-                <tr>
                     <th>Stock restant</th>
                     <th>{{stock_final}}</th>
-                </tr>
+                </tr> -->
                 {{autre_champs}}
             </tbody>
         </table>
