--- a/backend/statics/templates/demande_livraison.html
+++ b/backend/statics/templates/demande_livraison.html
@@ -121,6 +121,10 @@
                     <th>{{quantite}}</th>
                 </tr>
                 <tr>
+                    <th>Quantité validée</th>
+                    <th>{{quantite_validee}}</th>
+                </tr>
+                <tr>
                     <th>Stock initiale</th>
                     <th>{{stock_initial}}</th>
                 </tr>
